[package]
name = "getting_started"
version = "0.1.0"
authors = ["James Oakley <james@electronstudio.org>"]
license.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "show_posts"
doc = false
test = false

[[bin]]
name = "write_post"
doc = false
test = false

[[bin]]
name = "delete_post"
doc = false
test = false

[[bin]]
name = "publish_post"
path = "src/bin/publish_post.rs"
doc = false
test = false

[lib]
doc = false

[features]
default = ["pg", "sqlite", "sqlite-bundled", "turso"]
pg = ["butane/pg"]
sqlite = ["butane/sqlite"]
sqlite-bundled = ["butane/sqlite-bundled"]
turso = ["butane/turso"]

[dependencies]
butane.workspace = true

[dev-dependencies]
butane_cli.workspace = true
butane_core.workspace = true
butane_test_helper = { workspace = true, default-features = false, features = ["pg", "sqlite", "turso"] }
butane_test_macros.workspace = true
cfg-if.workspace = true
env_logger.workspace = true
log.workspace = true
paste.workspace = true

[package.metadata.release]
release = false
