[package]
name = "newtype"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
publish = false

[lib]
doc = false

[features]
default = ["pg", "sqlite", "sqlite-bundled"]
pg = ["butane/pg"]
sqlite = ["butane/sqlite"]
sqlite-bundled = ["butane/sqlite-bundled"]

[dependencies]
butane = {workspace = true, features = ["async", "async-adapter"]}
fake = { workspace = true, features = ["chrono", "derive", "uuid"] }
garde = { version = "0.22", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
butane_cli.workspace = true
butane_core.workspace = true
butane_test_helper.workspace = true
butane_test_macros.workspace = true
cfg-if.workspace = true
env_logger.workspace = true
log.workspace = true
paste.workspace = true
tokio = { workspace = true, features = ["macros"] }

[package.metadata.release]
release = false
