[package]
name = "reserved-words"
version = "0.1.0"
edition.workspace = true
license = "MIT OR Apache-2.0"
publish = false

[lib]
doc = false

[features]
default = ["pg", "sqlite", "sqlite-bundled", "turso"]
pg = ["butane/pg"]
sqlite = ["butane/sqlite"]
sqlite-bundled = ["butane/sqlite-bundled"]
turso = ["butane/turso"]

[dependencies]
butane = { workspace = true, features = ["async", "async-adapter", "fs", "log"] }

[dev-dependencies]
butane_cli.workspace = true
butane_core = { workspace = true, features = ["log"] }
butane_test_helper = { workspace = true, default-features = false, features = ["pg", "sqlite", "turso"] }
butane_test_macros.workspace = true
cfg-if.workspace = true
env_logger.workspace = true
log.workspace = true
paste.workspace = true
test-log.workspace = true
tokio = { workspace = true, features = ["macros"] }

[package.metadata.release]
release = false
